--- a/index.html
+++ b/index.html
@@ -3,29 +3,52 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quiz App</title>
+  <title>Advanced Quiz App</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <h1>Quiz App</h1>
 
+    <!-- Registration -->
     <div id="registration">
       <input type="email" id="email" placeholder="Enter your email" required />
-      <input type="number" id="startRange" placeholder="Start question #" min="1" />
-      <input type="number" id="endRange" placeholder="End question #" min="1" />
+
+      <h3>Select Mode:</h3>
+      <select id="modeSelect">
+        <option value="custom">Custom Range</option>
+        <option value="first100">First 100 Questions</option>
+        <option value="second100">Second 100 Questions</option>
+        <option value="timed">Timed Race (20 Questions)</option>
+      </select>
+
+      <div id="customRange">
+        <label>Start Question:</label>
+        <input type="range" id="startRange" min="1" max="300" value="1">
+        <span id="startLabel">1</span>
+
+        <label>End Question:</label>
+        <input type="range" id="endRange" min="1" max="300" value="20">
+        <span id="endLabel">20</span>
+      </div>
+
       <label>
         <input type="checkbox" id="shuffle" /> Shuffle questions
       </label>
       <button id="startBtn">Start Quiz</button>
     </div>
 
+    <!-- Quiz -->
     <div id="quiz" class="hidden">
+      <div id="timer" class="hidden">⏱ <span id="timeRemaining">00:00</span></div>
+      <div id="progress"></div>
       <div id="question-container"></div>
       <div id="options"></div>
+      <div id="feedback" class="feedback"></div>
       <button id="nextBtn" class="hidden">Next</button>
     </div>
 
+    <!-- Results -->
     <div id="results" class="hidden">
       <h2>Quiz Completed!</h2>
       <p id="score"></p>
