--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <div class="container">
     <h1>Quiz App</h1>
 
+    <h2 id="questionCountInfo" class="info"></h2>
+
+
     <!-- Registration -->
     <div id="registration">
       <input type="email" id="email" placeholder="Enter your email" required />
