--- a/index.html
+++ b/index.html
@@ -17,48 +17,62 @@
     <div id="registration">
       <input type="email" id="email" placeholder="Enter your email" required />
 
-      <h3>Select Mode:</h3>
-      <select id="modeSelect">
-        <option value="custom">Custom Range</option>
-        <option value="first100">First 100 Questions</option>
-        <option value="second100">Second 100 Questions</option>
-        <option value="timed">Timed Race (20 Questions)</option>
-      </select>
-
-      <div id="customRange">
-        <label>Start Question:</label>
-        <input type="range" id="startRange" min="1" max="300" value="1">
-        <span id="startLabel">1</span>
-
-        <label>End Question:</label>
-        <input type="range" id="endRange" min="1" max="300" value="20">
-        <span id="endLabel">20</span>
-      </div>
-
-      <label>
-        <input type="checkbox" id="shuffle" /> Shuffle questions
-      </label>
       <button id="startBtn">Start Quiz</button>
     </div>
 
+    <!-- Quiz Mode Select -->
+    <div id="modeSelection" class="hidden">
+      <h2>Select Mode</h2>
+
+      <h3>20 Question Sections</h3>
+      <div id="sections20" class="sections">
+        <button class="modeBtn disabled" data-mode="regular20" value="1">1-20</button>
+        <button class="modeBtn disabled" data-mode="regular20" value="2">21-40</button>
+        <button class="modeBtn disabled" data-mode="regular20" value="3">41-60</button>
+        <button class="modeBtn disabled" data-mode="regular20" value="4">61-80</button>
+        <button class="modeBtn disabled" data-mode="regular20" value="5">81-100</button>
+      </div>
+
+      <h3>100 Question Sections</h3>
+      <div id="sections100" class="sections">
+        <button class="modeBtn disabled">1-100</button>
+        <button class="modeBtn disabled">101-200</button>
+        <button class="modeBtn disabled">201-300</button>
+        <button class="modeBtn disabled">301-400</button>
+      </div>
+
+      <h3>Random Timed Modes</h3>
+      <div class="timedModes">
+        <button class="modeBtn" data-mode="random20">⚡ 20 Questions / 3 min</button>
+        <button class="modeBtn" data-mode="random50">🎯 50 Questions / 6 min</button>
+      </div>
+    </div>
+
     <!-- Quiz -->
-    <div id="quiz" class="hidden">
-      <div id="timer" class="hidden">⏱ <span id="timeRemaining">00:00</span></div>
-      <div id="progress"></div>
-      <div id="question-container"></div>
+    <div id="quizContainer" class="hidden">
+      <div id="quizHeader">
+        <span id="progress">Question 2 / 2</span>
+        <span id="timer">2:55</span>
+      </div>
+      <div id="questionContainer"></div>
       <div id="options"></div>
-      <div id="feedback" class="feedback"></div>
-      <button id="nextBtn" class="hidden">Next</button>
+      <div id="feedback"></div>
+      <button id="nextBtn" class="">Next</button>
     </div>
 
     <!-- Results -->
     <div id="results" class="hidden">
-      <h2>Quiz Completed!</h2>
+      <h2>⭐ Quiz Completed!</h2>
       <p id="score"></p>
       <p id="time"></p>
-      <h3>Leaderboard</h3>
-      <ul id="leaderboard"></ul>
-      <button id="restartBtn">Restart</button>
+    </div>
+    <div id="leaderboard" class="hidden">
+      <h2>🏆 Leaderboard</h2>
+      <table id="leaderboardTable">
+        <thead><tr><th>Email</th><th>Score</th><th>Time (s)</th></tr></thead>
+        <tbody><tr><td>aktabanchik@gmail.com</td><td>0</td><td>5</td></tr></tbody>
+      </table>
+      <button id="backToMenu">⬅ Back to Menu</button>
     </div>
   </div>
 
