registration box errors fixed

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <!-- Registration -->
     <div id="registration">
-      <input type="email" id="email" placeholder="Enter your email" required />
+      <input type="email" id="emailInput" placeholder="Enter your email" required />
 
-      <button id="startBtn">Start Quiz</button>
+      <button id="registerBtn">Start Quiz</button>
     </div>
 
     <!-- Quiz Mode Select -->
