sumbit button added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
       <div id="questionContainer"></div>
       <div id="options"></div>
       <div id="feedback"></div>
-      <button id="nextBtn" class="">Next</button>
+      <div id="buttonBlock">
+        <button id="submitBtn" class="">Submit</button>
+        <button id="nextBtn" class="">Next</button>
+      </div>
+      
     </div>
 
     <!-- Results -->
