styled question card

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Quiz Mode Select -->
     <div id="modeSelection" class="hidden">
-      <h2>Select Mode</h2>
+      <h2>Select Quiz Mode</h2>
 
       <h3>20 Question Sections</h3>
       <div id="sections20" class="sections">
@@ -56,12 +56,11 @@
       </div>
       <div id="questionContainer"></div>
       <div id="options"></div>
-      <div id="feedback"></div>
       <div id="buttonBlock">
         <button id="submitBtn" class="">Submit</button>
         <button id="nextBtn" class="">Next</button>
       </div>
-      
+      <div id="feedback"></div>
     </div>
 
     <!-- Results -->
