checks email in local storage

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Quiz App</h1>
-
+    <h1>
+      <div>Quiz App</div>
+      <button id="changeUserBtn" class="hidden">Change User</button>
+    </h1>
     <h2 id="questionCountInfo" class="info"></h2>
 
 
