--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>
-      <div>Quiz App</div>
-      <button id="changeUserBtn" class="hidden">Change User</button>
-    </h1>
+    <div id="header">
+      <h1>Quiz App</h1>
+      <button id="changeUserBtn" class="hidden">➜]</button>
+    </div>
     <h2 id="questionCountInfo" class="info"></h2>
 
 
