--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <button id="submitBtn" class="">Submit</button>
         <button id="nextBtn" class="">Next</button>
       </div>
-      <div id="feedback"></div>
+      <div id="feedback" class="hidden"></div>
     </div>
 
     <!-- Results -->
