--- a/index.html
+++ b/index.html
@@ -98,15 +98,9 @@
     <!-- Results -->
     <div id="results" class="hidden">
       <h2>⭐ Quiz Completed!</h2>
-      <p id="score"></p>
-      <p id="time"></p>
-    </div>
-    <div id="leaderboard" class="hidden">
-      <h2>🏆 Leaderboard</h2>
-      <table id="leaderboardTable">
-        <thead><tr><th>Email</th><th>Score</th><th>Time (s)</th></tr></thead>
-        <tbody><tr><td>aktabanchik@gmail.com</td><td>0</td><td>5</td></tr></tbody>
-      </table>
+      <h2 id="score"></p>
+      <h2 id="time"></p>
+
       <button id="backToMenu">⬅ Back to Menu</button>
     </div>
   </div>
