--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button id="changeUserBtn" class="hidden">➜]</button>
       </div>
     </div>
-    <h2 id="questionCountInfo" class="info"></h2>
+    <b id="questionCountInfo" class="info"></b>
 
 
     <!-- Registration -->
@@ -51,14 +51,14 @@
     <!-- Quiz Mode Select -->
     <div id="modeSelection" class="hidden">
       <h1>Select Quiz</h1>
-
+      <hr>
       <h3>Take a Test</h3>
       <p><i>Random 20 / 50 questions out of full library.</i></p>
       <div class="timedModes">
         <button class="modeBtn" data-mode="random20">⚡ 20 Questions / 3 min</button>
         <button class="modeBtn" data-mode="random50">🎯 50 Questions / 6 min</button>
       </div>
-
+      <hr>
       <h3>20 Question </h3>
       <p><i>This questions are not shuffled - they appear in a fixed order within each set</i></p>
       <div id="sections20" class="sections">
@@ -68,7 +68,7 @@
         <button class="modeBtn disabled" data-mode="regular20" value="4">61-80</button>
         <button class="modeBtn disabled" data-mode="regular20" value="5">81-100</button>
       </div>
-
+      <hr>
       <h3>100 Question </h3>
       <p><i>This questions are not shuffled - they appear in a fixed order within each set</i></p>
       <div id="sections100" class="sections">
