quizState clear after end

--- a/index.html
+++ b/index.html
@@ -100,14 +100,16 @@
 
     <!-- Results -->
     <div id="results" class="hidden">
-      <h1>⭐ Quiz Completed!</h1>
-      
-      <div>
-        <h2 id="score"></p>
-        <h2 id="time"></p>
-      </div>
+      <div id="resultsContainer">
+          <h1>⭐ Quiz Completed!</h1>
+        
+        <div>
+          <h2 id="score"></p>
+          <h2 id="time"></p>
+        </div>
 
-      <button id="backToMenu">⬅ Back to Menu</button>
+        <button id="backToMenu">⬅ Back to Menu</button>
+      </div>
     </div>
   </div>
 
