--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Welcome</h1>
     <div class="options">
-        <a href="html/aws.html">AWS</a>
-        <a href="html/terraform.html">Terraform</a>
+        <a href="aws.html">AWS</a>
+        <a href="terraform.html">Terraform</a>
     </div>
 </body>
 </html>
