--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <h1>Welcome</h1>
     <div class="options">
-        <a href="aws.html">AWS</a>
-        <a href="terraform.html">Terraform</a>
+        <a href="html/aws.html">AWS</a>
+        <a href="html/terraform.html">Terraform</a>
     </div>
 </body>
 </html>
