new topic added

--- a/html/terraform.html
+++ b/html/terraform.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Advanced Quiz App</title>
   <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/terraform.css" />
 </head>
 <body>
   <div class="container">
@@ -59,14 +60,14 @@
         <button class="modeBtn" data-mode="random50">🎯 50 Questions / 12 min</button>
       </div>
       <hr>
-      <h3>20 Question </h3>
+      <h3>25 Question </h3>
       <p><i>This questions are not shuffled - they appear in a fixed order within each set</i></p>
-      <div id="sections20" class="sections">
-        <button class="modeBtn disabled" data-mode="regular20" value="1">1-20</button>
-        <button class="modeBtn disabled" data-mode="regular20" value="2">21-40</button>
-        <button class="modeBtn disabled" data-mode="regular20" value="3">41-60</button>
-        <button class="modeBtn disabled" data-mode="regular20" value="4">61-80</button>
-        <button class="modeBtn disabled" data-mode="regular20" value="5">81-100</button>
+      <div id="sections25" class="sections">
+        <button class="modeBtn disabled" data-mode="regular25" value="1">1-20</button>
+        <button class="modeBtn disabled" data-mode="regular25" value="2">21-40</button>
+        <button class="modeBtn disabled" data-mode="regular25" value="3">41-60</button>
+        <button class="modeBtn disabled" data-mode="regular25" value="4">61-80</button>
+        <button class="modeBtn disabled" data-mode="regular25" value="5">81-100</button>
       </div>
       <hr>
       <h3>100 Question </h3>
